# qwantzle-search

./: 1663.txt  Cargo.toml  LICENSE  README.md  details.txt  log.txt  perf.data  perf.data.old  stats.csv  strips.csv
corpus/: 1663-prefix.txt  context_gemma3_3550.txt  context_gemma3_3550_0.05.txt  context_gemma3_3550_0.10.txt  context_gemma3_3550_0.15.txt  context_gemma3_3550_0.20.txt  dictionary_filter.txt  interesting_prefixes.txt  letter_pool.safetensors  old_validation_set.csv  old_validation_strips.csv  proposed-1663-punchlines.txt  validation_strips.csv
reports/: cc-2024-10-02.txt  cc-2024-10-04.txt  cc-55-by-qw-mistral.Q2_K.gguf-ad-hoc.txt  cc-55-by-qw-mistral.Q2_K.gguf-prb-v3-failed1.txt  cc-55-by-qw-mistral.Q2_K.gguf-prob-0.2-decline.txt  cc-55-by-qw-mistral.Q2_K.gguf-prob-long.txt  cc-55-by-qw-mistral.Q2_K.gguf.txt  cc-65-by-qw-mistral-high-lr.Q2_K.gguf-filter-dictionary.txt  cc-65-by-qw-mistral-high-lr.Q2_K.gguf.txt  cc-65-by-qw-mistral.Q2_K.gguf-prb-v4-dict.txt  cc-65-by-qw-tinyllama.F16.gguf.txt  cc-70-by-qw-mistral-high-lr.Q2_K.gguf.txt  cc-70-by-qw-mistral-high-lr.Q4_K_M.gguf-defrag-0.6.txt  cc-70-by-qw-mistral-high-lr.Q4_K_M.gguf-defrag-0.75.txt  cc-70-by-qw-mistral-high-lr.Q4_K_M.gguf-exp-4.0.txt  cc-70-by-qw-mistral-high-lr.Q4_K_M.gguf.txt  cc-71-by-Yi-1.5-9B.Q4_K_S.gguf.txt  cc-71-by-mistral-7b-v0.3.Q4_K_S.gguf.txt  cc-71-by-qw-mistral-high-lr.Q4_K_M.gguf.txt  cc-71-by-qw-mistral-low-lr.Q4_K_M.gguf.txt  cc-71-by-qw-tinyllama.F16.gguf.txt  cc-71-by-qw-yi-9b.Q4_K_M.gguf.txt  cc-71-by-qwen2.5-14b.Q2_K.gguf.txt  cc-80-by-Yi-1.5-9B.Q4_K_S.gguf.txt  cc-80-by-gemma-2-9b.Q2_K.gguf.txt  cc-80-by-gemma-3-12b-pt.Q2_K.gguf.txt  cc-80-by-gemma-3-4b-pt.Q4_K_M.gguf.txt  cc-80-by-gemma-7b.Q4_K_M.gguf.txt  cc-80-by-mistral-7b-v0.3.Q4_K_S.gguf.txt  cc-80-by-qw-gemma-2e-4x1-7b.Q4_K_M.gguf.txt  cc-80-by-qw-gemma2-2e-5x2-9b.Q4_K_M.gguf.txt  cc-80-by-qw-mistral-2e-4-7b.Q4_K_M.gguf.txt  cc-80-by-qw-mistral-high-lr.Q2_K.gguf.txt  cc-80-by-qw-mistral-high-lr.Q4_K_M.gguf-5-to-1.txt  cc-80-by-qw-mistral-high-lr.Q4_K_M.gguf-6-to-3.txt  cc-80-by-qw-mistral-high-lr.Q4_K_M.gguf-6-to-4.txt  cc-80-by-qw-mistral-high-lr.Q4_K_M.gguf-partial.txt  cc-80-by-qw-mistral-high-lr.Q4_K_M.gguf.txt  cc-80-by-qw-orca-76b.Q4_K_M.gguf.txt  cc-80-by-qw3-gemma-7b-1x2e-4.Q4_K_M.gguf.txt  (+120 more)
reports/cc-old-machine/: cc-2024-10-01.txt  cc-2024-10-04.txt  cc-2024-10-05.txt  (+12 more)
runner/: Dockerfile  estimation.sh  evaluate_models.sh  get_24gb_models.sh  get_8gb_models.sh  start_build.sh
src/: aux.rs  convert.md  corpus.rs  game-preventer.sh  llm.rs  main.rs  pool.rs  remaining_letters_neural_net.rs  search.rs  strip.rs
(+254 files in other folders)
