[package]
name = "qwantzle-search"
version = "0.1.0"
edition = "2021"
default-run = "main"

# Search estimation
[[bin]]
name = "main"
path = "src/main.rs"

# Various random experiments.
[[bin]]
name = "aux"
path = "src/aux.rs"

[dependencies]
llama_cpp = { path = "../llama_cpp-rs/crates/llama_cpp" }
llama_cpp_sys = { path = "../llama_cpp-rs/crates/llama_cpp_sys" }
csv = "1.1"
indicatif = "0.17"
clap = { version = "4.5.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.10"
num-traits = "0.2"
small-map = "0.1.3"
priority-queue = "2.1.1"
trie-rs = "0.4.2"
anyhow = "1.0.91"
candle-core = "0.7.2"
candle-nn = "0.7.2"
safetensors = "0.4.5"

[features]
cuda = ["llama_cpp/cuda", "llama_cpp_sys/cuda"]
