[package]
name = "qwantzle-search"
version = "0.1.0"
edition = "2021"
default-run = "main"

# Search estimation
[[bin]]
name = "main"
path = "src/main.rs"

# Various random experiments.
[[bin]]
name = "aux"
path = "src/aux.rs"

[dependencies]
csv = "1.1"
indicatif = "0.17"
clap = { version = "4.5.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.10"
num-traits = "0.2"
small-map = "0.1.3"
priority-queue = { version = "2.1.1", features = ["serde"] }
trie-rs = "0.4.2"
anyhow = "1.0.91"
candle-core = "0.7.2"
candle-nn = "0.7.2"
safetensors = "0.4.5"
assoc = "0.1.3"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git", features = ["cuda"] }
lazy_static = "1.5.0"
gag = "1.0.0"
signal-hook = "0.3.17"
thousands = "0.2.0"
lazysort = "0.2.1"
